--- a/src/Style.scss
+++ b/src/Style.scss
@@ -1,15 +1,10 @@
+html {
+    scroll-behavior: smooth !important;
+}
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
+    font-family: Roboto;
     background-color: #EDF5E1;
     color: rgb(60, 60, 60);
-}
-
-.underConstruction {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    margin-top: 10rem;
+    margin: 0;
+    padding: 0;
 }
