--- a/src/View/Homepage/Intro/Style.scss
+++ b/src/View/Homepage/Intro/Style.scss
@@ -3,7 +3,7 @@
 
 .Intro {
   position: relative;
-  height: $Height;
+  height: 400px;
 
   h4 {
     display: block;
@@ -33,15 +33,17 @@
 
   li {
     display: inline-block;
+  }
+
+  li a {
+    display: inline-block;
     padding: 10px;
     cursor: pointer;
     transition: 0.5s;
     font-size: 15px;
-    
-    a {
-      color: rgb(90, 90, 90);
-      text-decoration: none;
-    }
+    color: rgb(90, 90, 90);
+    text-decoration: none;
+
     &:hover {
       background-color: $DutchWhite;
     }
@@ -64,15 +66,16 @@
 
   li {
     display: inline-block;
+  }
+
+  li a {
+    display: inline-block;
     padding: 10px;
     cursor: pointer;
     transition: 0.5s;
     background-color: $DutchWhite;
     font-size: 15px;
-    
-    a {
-      color: rgb(90, 90, 90);
-      text-decoration: none;
-    }
+    color: rgb(90, 90, 90);
+    text-decoration: none;
   }
 }
