--- a/src/View/Homepage/Skills/Style.scss
+++ b/src/View/Homepage/Skills/Style.scss
@@ -3,7 +3,7 @@
 
 .Skills {
   position: relative;
-  height: $Height;
+  min-height: $Height;
   margin-left: auto;
   margin-right: auto;
   max-width: 700px;
