--- a/src/Style.scss
+++ b/src/Style.scss
@@ -1,10 +1,56 @@
 html {
-    scroll-behavior: smooth !important;
+  scroll-behavior: smooth !important;
 }
 body {
-    font-family: Roboto;
-    background-color: #EDF5E1;
-    color: rgb(60, 60, 60);
-    margin: 0;
-    padding: 0;
+  font-family: Roboto;
+  color: rgb(60, 60, 60);
+  margin: 0;
+  padding: 0;
+}
+
+.backgroundSky {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#072142),
+    color-stop(#061c37),
+    color-stop(#07182b),
+    color-stop(#061220),
+    to(#020b16)
+  );
+  background-image: -webkit-linear-gradient(top, #072142, #061c37, #07182b, #061220, #020b16);
+  background-image: -o-linear-gradient(top, #072142, #061c37, #07182b, #061220, #020b16);
+  background-image: linear-gradient(to bottom, #072142, #061c37, #07182b, #061220, #020b16);
+  z-index: -200;
+}
+
+.backgroundStars {
+  display: block;
+  position: fixed;
+  margin-left: 400px;
+  width: calc(100% - 400px);
+  height: 100vh;
+  background-image: url("../assets/images/star.svg");
+  background-repeat: no-repeat;
+  z-index: 100;
+}
+
+.moonlight {
+  display: block;
+  position: fixed;
+  width: 1100px;
+  height: 1100px;
+  top: -150px;
+  left: 560px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-image: url("../assets/images/moonlight.svg");
+  z-index: 50;
 }
