--- a/src/View/Homepage/Intro/Style.scss
+++ b/src/View/Homepage/Intro/Style.scss
@@ -1,81 +1,54 @@
-@import "../../Defaults/Colors.scss";
-@import "../../Defaults/Sections.scss";
-
-.Intro {
-  position: relative;
-  height: 400px;
-
-  h4 {
+.moonContainer {
+  .moon {
     display: block;
-    color: rgb(90, 90, 90);
-    font-weight: normal;
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 250px;
-    font-size: 19px;
-    text-transform: uppercase;
+    position: fixed;
+    width: 600px;
+    height: 600px;
+    top: 95px;
+    left: 820px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-image: url("../../../../assets/images/moon.svg");
+    z-index: 20;
   }
-}
+  .clouds {
+    display: block;
+    position: fixed;
+    width: 380px;
+    height: 190px;
+    background-repeat: no-repeat;
+    background-size: 100%;
 
-.NavigationCenter {
-  display: block;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  list-style: none;
-  text-align: center;
-  padding: 0;
-  width: 100%;
-  transition: top 0.5s ease-in;
-  color: rgb(90, 90, 90);
-  border-radius: 2px;
-
-  li {
-    display: inline-block;
-  }
-
-  li a {
-    display: inline-block;
-    padding: 10px;
-    cursor: pointer;
-    transition: 0.5s;
-    font-size: 15px;
-    color: rgb(90, 90, 90);
-    text-decoration: none;
-
-    &:hover {
-      background-color: $DutchWhite;
+    &.cloud1 {
+      top: 25px;
+      left: 1100px;
+      background-image: url("../../../../assets/images/b_cloud01.svg");
+      z-index: 10;
     }
-  }
-}
+    &.cloud2 {
+      top: 120px;
+      left: 630px;
+      background-image: url("../../../../assets/images/b_cloud02.svg");
+      z-index: 10;
+    }
 
-.Navigation {
-  display: block;
-  position: fixed;
-  margin-left: auto;
-  margin-right: auto;
-  list-style: none;
-  text-align: right;
-  padding: 0;
-  transition: top 0.5s ease-in;
-  top: 10px;
-  right: 20px;
-  z-index: 9999;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);
-
-  li {
-    display: inline-block;
-  }
-
-  li a {
-    display: inline-block;
-    padding: 10px;
-    cursor: pointer;
-    transition: 0.5s;
-    background-color: $DutchWhite;
-    font-size: 15px;
-    color: rgb(90, 90, 90);
-    text-decoration: none;
+    &.cloud3 {
+      top: 445px;
+      left: 685px;
+      background-image: url("../../../../assets/images/cloud1.svg");
+      z-index: 30;
+    }
+    &.cloud4 {
+      top: 550px;
+      left: 1095px;
+      background-image: url("../../../../assets/images/cloud2.svg");
+      z-index: 30;
+    }
+    &.cloud5 {
+      top: 290px;
+      left: 1215px;
+      background-image: url("../../../../assets/images/cloud3.svg");
+      z-index: 30;
+    }
   }
 }
