--- a/src/Style.scss
+++ b/src/Style.scss
@@ -6,6 +6,9 @@ body {
   color: rgb(60, 60, 60);
   margin: 0;
   padding: 0;
+  min-width: 500px;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .backgroundSky {
@@ -14,7 +17,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-image: -webkit-gradient(
     linear,
     left top,
@@ -33,13 +36,31 @@ body {
 
 .backgroundStars {
   display: block;
-  position: fixed;
-  margin-left: 400px;
-  width: calc(100% - 400px);
-  height: 100vh;
+  position: absolute;
+  top: 70px;
+  left: 380px;
+  width: 1300px;
+  height: 900px;
   background-image: url("../assets/images/star.svg");
   background-repeat: no-repeat;
+  background-size: 100%;
   z-index: 100;
+
+  @media screen and (max-width: 1020px) {
+    top: 45px;
+    left: 110px;
+    width: 1200px;
+  }
+
+  @media screen and (max-width: 730px) {
+    top: -280px;
+    left: -210px;
+  }
+
+  @media screen and (max-width: 500px) {
+    top: -340px;
+    left: -305px;
+  }
 }
 
 .moonlight {
@@ -47,10 +68,39 @@ body {
   position: fixed;
   width: 1100px;
   height: 1100px;
-  top: -150px;
-  left: 560px;
+  top: -60px;
+  left: 550px;
   background-repeat: no-repeat;
   background-size: 100%;
   background-image: url("../assets/images/moonlight.svg");
   z-index: 50;
+
+  @media screen and (max-width: 1020px) {
+    top: -70px;
+    left: 140px;
+  }
+
+  @media screen and (max-width: 730px) {
+    top: -280px;
+    left: -210px;
+  }
+  
+  @media screen and (max-width: 500px) {
+    top: -340px;
+    left: -305px;
+  }
+}
+
+.seperator {
+  display: block;
+  width: 90px;
+  height: 4px;
+  border-radius: 5px;
+  background: #ff4d5a;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  &.right {
+    margin-left: 50px;
+  }
 }
