--- a/src/View/Homepage/Intro/Style.scss
+++ b/src/View/Homepage/Intro/Style.scss
@@ -1,4 +1,5 @@
 .intro {
+  height: 100vh;
   .content {
     padding-top: 250px;
     padding-left: 100px;
@@ -13,15 +14,6 @@
 
     @media screen and (max-width: 500px) {
       padding-top: 400px;
-    }
-
-    h1 {
-      color: white;
-      font-weight: normal;
-      font-size: 80px;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      text-transform: uppercase;
     }
 
     .info {
