--- a/src/Style.scss
+++ b/src/Style.scss
@@ -8,13 +8,15 @@ h1 {
   margin-top: 10px;
   margin-bottom: 10px;
   text-transform: uppercase;
+  @media only screen and (max-width: 501px) {
+    font-size: 40px;
+  }
 }
 body {
   font-family: Roboto;
   color: rgb(60, 60, 60);
   margin: 0;
   padding: 0;
-  min-width: 500px;
   max-width: 100%;
   overflow-x: hidden;
 }
