--- a/src/View/Homepage/Skills/Style.scss
+++ b/src/View/Homepage/Skills/Style.scss
@@ -1,8 +1,9 @@
 .skills {
+  margin-bottom: 300px;
   margin-left: auto;
   margin-right: auto;
-  max-width: calc(100% - 200px);
   .content {
+    padding-left: 100px;
     .skillInfoContainer {
       margin-top: 100px;
       margin-bottom: 100px;
