View GitHub link added

--- a/src/View/Homepage/Intro/Style.scss
+++ b/src/View/Homepage/Intro/Style.scss
@@ -26,6 +26,21 @@
       font-weight: normal;
       line-height: 30px;
     }
+    .github {
+      display: block;
+      width: 110px;
+      margin-top: 10px;
+      font-size: 20px;
+      text-decoration: none;
+      color: black;
+      border-radius: 20px;
+      padding: 10px 15px;
+      background-color: white;
+      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+      &:hover {
+        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+      }
+    }
   }
 
   .moonContainer {
