bug fixes & better design

--- a/src/View/Homepage/Experience/Style.scss
+++ b/src/View/Homepage/Experience/Style.scss
@@ -5,9 +5,10 @@
   position: relative;
   z-index: 200;
   .content {
-    padding-left: 100px;
+    padding-left: 30px;
     .experienceContainer {
       margin-top: 100px;
+      padding-right: 30px;
       .experience {
         padding: 20px;
         width: calc(100% - 100px);
