added machine learning

--- a/src/View/Homepage/Projects/Style.scss
+++ b/src/View/Homepage/Projects/Style.scss
@@ -8,7 +8,7 @@
     padding-left: 30px;
     .projectContainer {
       margin-right: 30px;
-      .project{
+      .project {
         display: inline-block;
         background-color: white;
         border-radius: 20px;
@@ -17,6 +17,7 @@
         max-width: 500px;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
         margin: 40px;
+        vertical-align: top;
 
         img {
           text-align: left;
@@ -27,7 +28,7 @@
             display: none;
           }
         }
-        .projectContent{
+        .projectContent {
           position: relative;
           display: inline-block;
           padding: 20px;
@@ -56,7 +57,7 @@
             transition: 0.5s;
             background-color: rgba(240, 240, 240, 1);
 
-            &:hover{
+            &:hover {
               box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
               background-color: rgba(255, 255, 255, 1);
             }
