skill page added

--- a/src/view/resume/Resume.css
+++ b/src/view/resume/Resume.css
@@ -3,6 +3,7 @@
   position: relative;
   min-width: 200px;
   min-height: 200px;
+  max-width: 600px;
   width: 40vw;
   height: 25vh;
   border-radius: 10px;
