--- a/src/view/App.css
+++ b/src/view/App.css
@@ -1,17 +1,21 @@
 .app {
-  display: flex;
   max-width: 1024px;
   min-width: 300px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
+  
+}
+
+.app .title {
+  display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 25vh;
   margin-bottom: 25vh;
 }
 
-.app .column {
+.app .title .column {
   display: flex;
   flex-direction: column;
   padding: 20px;
