--- a/src/view/experience/Experience.css
+++ b/src/view/experience/Experience.css
@@ -1,6 +1,36 @@
 .experience-heading {
   display: block;
   text-align: center;
+  margin-bottom: 40px;
+}
+
+.timeline .content ul {
+  padding-left: 10px;
+}
+
+.timeline-date {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 15px;
+  margin-right: 15px;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
+  padding: 5px 10px;
+  border-radius: 20px;
+  background-color: darkslategray;
+  color: white;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.timeline-title {
+  margin-top: 25px;
+}
+
+.timeline .content p,
+.timeline .content ul {
+  font-size: 16px;
 }
 
 .experience-container {
@@ -8,12 +38,102 @@
   position: relative;
   margin-bottom: 40px;
 }
-
+/* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
-  max-width: 100%;
+  width: 100%;
+  margin: 0 auto;
 }
 
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: black;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+  border-radius: 10px;
+}
+
+/* Container around content */
 .timeline .container {
-  
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: calc(50% - 80px);
+}
+
+/* The circles on the timeline */
+.timeline .container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid transparent;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.timeline .left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.timeline .right {
+  left: 50%;
+}
+
+/* Fix the circle for containers on the right side */
+.timeline .right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.timeline .content {
+  padding: 20px 30px;
+  position: relative;
+  border-radius: 6px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+
+  /* Full-width containers */
+  .timeline .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  /* Make sure that all arrows are pointing leftwards */
+  .timeline .container::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .timeline .left::after,
+  .timeline .right::after {
+    left: 15px;
+  }
+
+  /* Make all right containers behave like the left ones */
+  .timeline .right {
+    left: 0%;
+  }
 }
