--- a/src/common.scss
+++ b/src/common.scss
@@ -5,6 +5,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #efefef;
+  min-width: 500px;
+  padding-bottom: 50px;
 }
 #app {
   display: flex;
@@ -13,13 +15,6 @@ body {
 
 .full-width {
   width: 100%;
-}
-.content {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  padding-top: 40px;
-  padding-bottom: 40px;
 }
 
 .button {
