--- a/src/common.scss
+++ b/src/common.scss
@@ -41,3 +41,23 @@ body {
     box-shadow: 0 4px 2px 1px rgba(0, 0, 0, 0.25);
   }
 }
+
+input[type='text'] {
+  width: 400px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  padding: 10px 15px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+textarea {
+  min-height: 100px;
+  max-width: 400px;
+  min-width: 400px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  padding: 10px 15px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
