improve lighthouse score

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,4 @@
+@import "./font.css";
 @import 'tailwindcss';
 
 body {
@@ -15,7 +16,7 @@ div {
 }
 
 .profile-pic {
-  background-image: url('/images/zeeshan.jpeg');
+  background-image: url('/images/zeeshan.webp');
 }
 
 #app {
